
0.9.9c Oct 03, 2004
 * added support for debian style "or" conditional in slack-required
 * moved clean_pkg_dir() from configuration.[ch] to package.[ch]
 * fixed null short description from printing "null", prints "" instead
 * updated man page
 * translation updates
 * added --autoclean option to run purge_old_cached_pkgs() instead of automatically
   at the end of each transation (thanks Michel Hermier)
 * added purge_old_cached_pkgs() to be run at the end of each transaction
   (thanks Michel Hermier)
 * removed unneeded checks for WORKINGDIR_TOKEN_LEN and EXCLUDE_TOKEN_LEN in
   configuration parsing (thanks Peter Santoro)
 * added Greek translation by Savvas Eftratiadis
 * updated doinst.sh so that it doesn't try to do an in place file edit
   with sed as Slackware 8.1 and 9.1's sed doesn't support -i.
   Thanks to Peter Santoro.

0.9.9b Sep 22, 2004
 * searching packages now searches version string along with name,
   location, and description
 * updated makefile, doinst.sh generated script sed's slapt-getrc updating
   comment on /usr/doc/slapt-get*/ directory
 * added FAQ: 49. How can I downgrade a package?
 * added FAQ: 48. What is a meta package and how can I take advantage of it?
 * updated FAQ, added new Q: Will slapt-get break my system?
 * updated slack-desc with support entry pointing to slapt-get-user mailing list
 * updated documentation reflecting new location of the slapt-getrc file (thanks to Chris @ virtig01.net)
 * escaped + in package name within required_by(), fixing gtk+2 etc (thanks to Sergey Sukiyazov)
 * only add dependency if all it's dependencies where added (thanks to Sergey Sukiyazov)
 * updated encoding and translation of polish translation
 * updated man page
 * Brazilian Portuguese translation update
 * norwegian translation update
 * created german and french translations from babelfish (someone will have to update)
 * polish language update

0.9.9a Sep 06, 2004