@@ -22,6 +22,9 @@ struct _pkg_action_args {
 };
 typedef struct _pkg_action_args pkg_action_args_t;
 
+pkg_action_args_t *init_pkg_action_args(int arg_count);
+void free_pkg_action_args(pkg_action_args_t *paa);
+
 void pkg_action_install(const rc_config *global_config,const pkg_action_args_t *action_args);
 void pkg_action_list(void);
 void pkg_action_list_installed(void);
